--- a/app/src/main/res/layout/activity_newpassword.xml
+++ b/app/src/main/res/layout/activity_newpassword.xml
@@ -25,103 +25,51 @@
         android:id="@+id/newpassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Create your new password"
-        android:textSize="17sp"
         android:fontFamily="@font/medium"
+        android:gravity="center"
+        android:text="New Password"
         android:textColor="@color/black"
+        android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.105" />
+        app:layout_constraintVertical_bias="0.035" />
 
     <Button
         android:id="@+id/changepassword_btn"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:backgroundTint="@color/dark_blue"
+        android:fontFamily="@font/semibold"
         android:text="Change Password"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:fontFamily="@font/semibold"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.439" />
+        app:layout_constraintVertical_bias="0.383" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.198">
-
-        <TextView
-            android:id="@+id/newpassword_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Password"
-            android:textColor="#D0D0D0"
-            android:textSize="13sp"
-            android:fontFamily="@font/regular"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.059"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.166"
-            android:paddingTop="8dp"/>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/newpassword_layout"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:passwordToggleEnabled="true"
->
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:fontFamily="@font/regular"
-                android:layout_height="match_parent"
-                android:background="@drawable/custom_input"
-                android:inputType="textPassword"
-                android:textSize="13sp"
-                android:paddingTop="20dp"
-                android:paddingBottom="0dp"
-                android:paddingStart="13dp"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3">
+        app:layout_constraintVertical_bias="0.244">
 
         <TextView
             android:id="@+id/confirmpassword_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Confirm Password"
             android:fontFamily="@font/regular"
+            android:paddingTop="8dp"
+            android:text="Confirm Password"
             android:textColor="#D0D0D0"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -129,8 +77,7 @@
             app:layout_constraintHorizontal_bias="0.059"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.166"
-            android:paddingTop="8dp"/>
+            app:layout_constraintVertical_bias="0.166" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/confirmpassword_layout"
@@ -140,21 +87,70 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:passwordToggleEnabled="true"
-            >
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/confirmpassword"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/custom_input"
-                android:inputType="textPassword"
-                android:textSize="13sp"
                 android:fontFamily="@font/regular"
+                android:inputType="textPassword"
+                android:paddingStart="13dp"
                 android:paddingTop="20dp"
                 android:paddingBottom="0dp"
+                android:textSize="13sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.141">
+
+        <TextView
+            android:id="@+id/newpassword_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/regular"
+            android:paddingTop="8dp"
+            android:text="New Password"
+            android:textColor="#D0D0D0"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.059"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.166" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/newpassword_layout"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:passwordToggleEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/custom_input"
+                android:fontFamily="@font/regular"
+                android:inputType="textPassword"
                 android:paddingStart="13dp"
-                />
+                android:paddingTop="20dp"
+                android:paddingBottom="0dp"
+                android:textSize="13sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
