--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <ImageButton
-        android:id="@+id/back_btn2"
+        android:id="@+id/back_btn"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:background="@drawable/back_btn"
